Prøver å endre dockerfile